# Python-lite-Compiler

./: .gitignore  CMakeLists.txt  README.md  flowchart.tex  streamlit_app.py  tmp_batch.ps1
.streamlit_tmp/: streamlit_input_20260409_234030_345470.cd  streamlit_input_20260409_234105_691508.cd  streamlit_input_20260409_235320_800745.cd
docs/: CFG.md  ast.dot  parse_table.txt  symbol_table.txt  token_stream.txt
examples/: sample_program.cd  sample_program1.cd  sample_program_error_lex.cd  sample_program_error_parse.cd  sample_program_panic_mode.cd  source_location_test.cd  testA.cd  testB.cd  testD.cd  testE.cd  testF.cd  testG.cd  tmp_if_type_error.cd  tmp_plus_test.cd
include/compiler/: ast_nodes.hpp  cfg.hpp  grammar_tools.hpp  io_utils.hpp  lex_automata.hpp  lexer.hpp  parser.hpp  pipeline.hpp  preprocessor.hpp  semantic.hpp  symbol_table.hpp  tokens.hpp
src/: main.cpp
src/compiler/: ast_nodes.cpp  cfg.cpp  grammar_tools.cpp  io_utils.cpp  lex_automata.cpp  lexer.cpp  parser.cpp  pipeline.cpp  preprocessor.cpp  semantic.cpp  symbol_table.cpp  tokens.cpp
tests/: test_main.cpp
tests/determinism_tmp/testA/run1/: symbol_table.txt
tests/determinism_tmp/testA/run2/: parse_table.txt  token_stream.txt
tests/determinism_tmp/testB/run1/: parse_table.txt
tests/determinism_tmp/testB/run2/: symbol_table.txt  token_stream.txt
tests/determinism_tmp/testC/run1/: parse_table.txt  token_stream.txt
tests/determinism_tmp/testC/run2/: symbol_table.txt
tests/determinism_tmp/testD/run1/: symbol_table.txt
tests/golden/: symbol_table.txt
(+10 files in other folders)
